--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -20,8 +20,12 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@types/datatables.net": "^1.10.11",
+    "angular-6-datatable": "^0.8.0",
+    "angular-datatables": "^6.0.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
