--- a/angular-app/angular.json
+++ b/angular-app/angular.json
@@ -24,10 +24,12 @@
             ],
             "styles": [
               "src/styles.css",
-              "./node_modules/angular2-busy/build/style/busy.css"
+              "./node_modules/angular2-busy/build/style/busy.css",
+              "./node_modules/datatables.net-dt/css/jquery.dataTables.css"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.js"
+              "./node_modules/jquery/dist/jquery.js",
+              "./node_modules/datatables.net/js/jquery.dataTables.js"
             ]
           },
           "configurations": {
