--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -25,6 +25,8 @@
     "angular-datatables": "^6.0.0",
     "angular2-busy": "^2.0.4",
     "core-js": "^2.5.4",
+    "datatables.net": "^1.10.19",
+    "datatables.net-dt": "^1.10.19",
     "jquery": "^3.3.1",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.1",
